Make AdjustComputedWidth/Height take a boolean that tells it whether to account for box-sizing; sometimes we don't want to.  Also fix parsing of max-width/height and min-width/height to error on negative values (per spec). Bug 227819, r+sr=dbaron